New file for Clustering

--- a/Basic_Classification.ipynb
+++ b/Basic_Classification.ipynb
@@ -305,11 +305,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "23209f07-3c32-4aeb-8d6f-96e15853ddf3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello\")"
+   ]
   },
   {
    "cell_type": "code",
