--- a/Clustering.ipynb
+++ b/Clustering.ipynb
@@ -2,8 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "15381ad7-49d2-438a-a0dd-6eac6b05c7b3",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello World\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f68fe0c5-16d6-4576-9cec-a7810d88a187",
    "metadata": {},
    "outputs": [],
    "source": []
