--- a/Clustering.ipynb
+++ b/Clustering.ipynb
@@ -2,8 +2,60 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f68fe0c5-16d6-4576-9cec-a7810d88a187",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import *\n",
+    "from sklearn.model_selection import KFold\n",
+    "from sklearn.metrics import roc_curve, auc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "aaf4c654-183a-4c32-8e1f-5608922bb1ec",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.datasets import load_digits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "224dea63-cc2b-42bf-9f0c-cc93ed5e4561",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# digits: 10; # samples: 1797; # features 64\n"
+     ]
+    }
+   ],
+   "source": [
+    "data, labels = load_digits(return_X_y=True)\n",
+    "(n_samples, n_features) = data.shape\n",
+    "n_digits = np.unique(labels).size\n",
+    "print(f\"# digits: {n_digits}; # samples: {n_samples}; # features {n_features}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f5934ee7-090a-4861-9c99-c56315fd7ab7",
    "metadata": {},
    "outputs": [],
    "source": []
