--- a/Clustering.ipynb
+++ b/Clustering.ipynb
@@ -186,7 +186,7 @@
     "    zorder=10,\n",
     ")\n",
     "plt.title(\n",
-    "    \"K-means clustering on the digits dataset (PCA-reduced data)\\n\"\n",
+    "    \"K-means clustering on the digits dataset utilizing PCA-reduced data\\n\"\n",
     "    \"Centroids are marked with white cross\"\n",
     ")\n",
     "plt.xlim(x_min, x_max)\n",
